--- a/stil.css
+++ b/stil.css
@@ -1,4 +1,82 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap');
+
 *{
-  margin: 0;
-  padding: 0;
+	margin: 0;
+	padding: 0;
+}
+
+body{
+	font-family: "Quicksand", sans-serif;
+	background: linear-gradient(to right, yellow, orange);
+}
+
+h1{
+	font-size: 40px;
+	color: yellow;
+}
+p{
+	font-size: 20px;
+}
+h2{
+	font-size: 30px;
+	color: orange;
+	text-align: center;
+}
+a{
+	text-decoration: none;
+}
+
+
+.zunanji{
+	width: 80%;
+	min-height: 300px;
+	min-width: 500px;
+	margin: 25px auto;
+	background-color: #474747;
+	color: white;
+	padding: 20px 25px;
+	border-radius: 25px;
+	box-shadow: 0 0 20px black;
+}
+.zbirkaslik{
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-evenly;
+}
+.zbirkaprojektov{
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-evenly;
+}
+
+#ikona{
+	border-radius: 50%;
+	width: 300px;
+	height: 300px;
+	float: right;
+	margin-left: 20px;
+	box-shadow: 0 0 20px black;
+}
+.logo{
+	margin: 20px;
+}
+.projekt{
+	max-width: 600px;
+	min-width: 300px;
+	min-height: 300px;
+	margin: 20px;
+	padding: 15px;
+	border: 2px solid orange;
+	border-radius: 50px;
+	box-shadow: 0 0 20px black;
+	color: white;
+}
+.projekt:hover{
+	box-shadow: 0 0 20px orange;
+	cursor: pointer;
+}
+.projektslika{
+	border-radius: 50px;
+	margin-right: 15px;
+	float: left;
 }
